@@ -25,7 +25,11 @@ import org.kiji.annotations.ApiAudience;
 import org.kiji.delegation.Priority;
 
 /**
- * Factory for CDH4.2-specific SchemaPlatformBridge implementation.
+ * Factory for CDH4.2- and CDH4.3-specific SchemaPlatformBridge implementation.
+ *
+ * <p>This is the high-priority provider for CDH4.2 and CDH4.3; it is also the
+ * default-priority provider for CDH4.x if no better match is available. Future
+ * CDH releases will automatically fall back to this bridge.</p>
  */
 @ApiAudience.Private
 public final class CDH42MR1SchemaBridgeFactory extends SchemaPlatformBridgeFactory {
@@ -50,9 +54,20 @@ public final class CDH42MR1SchemaBridgeFactory extends SchemaPlatformBridgeFacto
     String hadoopVer = org.apache.hadoop.util.VersionInfo.getVersion();
     String hbaseVer = org.apache.hadoop.hbase.util.VersionInfo.getVersion();
 
-    if (hadoopVer.matches("2\\..*-cdh4\\..*")
+    if (hadoopVer.matches("2\\..*-cdh4\\.2\\..*")
+        && hbaseVer.matches("0\\.94\\..-cdh4\\.2\\..*")) {
+      // Hadoop 2.x-cdh4.2.* and HBase 0.94.X-cdh4.2.* match correctly; this is the
+      // best platform bridge available.
+      return Priority.HIGH;
+    } else if (hadoopVer.matches("2\\..*-cdh4\\.3\\..*")
+        && hbaseVer.matches("0\\.94\\..-cdh4\\.3\\..*")) {
+      // Hadoop 2.x-cdh4.3.* and HBase 0.94.X-cdh4.3.* match correctly; this is the
+      // best platform bridge available.
+      return Priority.HIGH;
+    } else if (hadoopVer.matches("2\\..*-cdh4\\..*")
         && hbaseVer.matches("0\\.94\\..-cdh4\\..*")) {
-      // Hadoop 2.x-cdh4.* and HBase 0.94.X-cdh4.* match correctly; use this bridge.
+      // Hadoop 2.x-cdh4.* and HBase 0.94.X-cdh4.* match correctly; use this bridge
+      // if no more-precise CDH4.x-specific bridge is available.
       return Priority.NORMAL;
     } else {
       // Can't provide for this implementation.
